# guardrail

./: .dockerignore  .env  .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Containerfile  Containerfile.api  Containerfile.curator  Containerfile.ingestion  Containerfile.jobs  Containerfile.leptos  Containerfile.processor  Containerfile.schema-sync  Containerfile.ui  Containerfile.web  LICENSE  README.md  guardrail.code-workspace  package-lock.json  package.json  tailwind.config.js
crates/api/: Cargo.toml
crates/api/src/: annotations.rs  api_token.rs  app_state.rs  error.rs  file_cleanup.rs  lib.rs  main.rs  minidump.rs  routes.rs  state.rs  symbols.rs  token.rs  utils.rs  webauthn.rs  worker.rs
crates/api/src/api/: annotation.rs  attachment.rs  base.rs  crash.rs  error.rs  minidump.rs  product.rs  routes.rs  version.rs
crates/api/src/utils/: mod.rs  stream_to_file.rs
crates/api/tests/: health_tests.rs  minidump_upload_tests.rs  symbols_upload_tests.rs  token_tests.rs
crates/app/: Cargo.toml
crates/app/src/: classes.rs  data.rs  data_provider.rs  lib.rs  settings.rs
crates/app/src/auth/: error.rs  extract.rs  layer.rs  mod.rs  passkeys.rs
crates/app/src/components/: confirmation.rs  crash.rs  crashes.rs  dataform.rs  datatable.rs  datatable_form.rs  datatable_header.rs  error_template.rs  form.rs  header.rs  login.rs  logout.rs  mod.rs  navbar.rs  passkey_logo.rs  products.rs  profile.rs  register.rs  symbols.rs  users.rs  versions.rs
crates/app/src/data/: crash.rs  mod.rs  product.rs  symbols.rs  user.rs  version.rs
crates/app/src/data_providers/: crash.rs  mod.rs  product.rs  symbols.rs  user.rs  version.rs
crates/app/src/entity/: annotation.rs  attachment.rs  crash.rs  credential.rs  mod.rs  prelude.rs  product.rs  role.rs  sea_orm_active_enums.rs  session.rs  symbols.rs  user.rs  version.rs
crates/app/src/model/: annotation.rs  crash.rs  product.rs  version.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  settings.rs  token.rs
crates/data/: Cargo.toml
crates/data/src/: annotation.rs  api_token.rs  attachment.rs  crash.rs  credentials.rs  lib.rs  product.rs  symbols.rs  user.rs  version.rs
crates/entity/: Cargo.toml
crates/entity/src/: annotation.rs  lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: error.rs  jobs.rs  lib.rs  main.rs  minidump.rs  signature_generator.rs  state.rs  symbol_provider.rs
crates/jobs/src/maintenance/: database_vacuum.rs  job_cleaner.rs  mod.rs  orphaned_attachment_cleaner.rs  orphaned_minidump_cleaner.rs
crates/jobs/tests/: job_cleaner_test.rs  minidump_test.rs
crates/migration/: Cargo.toml  README.md
crates/migration/src/: lib.rs  m20230824_000000_create_functions.rs  m20230824_000001_create_product_table.rs  m20230824_000003_create_crash_table.rs  m20230824_000004_create_attachment_table.rs  m20230824_000005_create_annotation_table.rs  m20230824_000006_create_symbols_table.rs  m20230930_000008_create_session_table.rs  m20231210_000009_create_user_table.rs  m20231210_000010_create_credential_table.rs  m20240608_000011_create_role_table.rs
crates/repos/: Cargo.toml
crates/repos/src/: annotation.rs  api_token.rs  attachment.rs  crash.rs  credentials.rs  error.rs  lib.rs  product.rs  symbols.rs  user.rs  version.rs
crates/repos/tests/: annotation_tests.rs  api_token_tests.rs  attachment_tests.rs  crash_tests.rs  credentials_tests.rs  lib_tests.rs  mock_db_tests.rs  product_tests.rs  repo_build_query_tests.rs  symbols_tests.rs  user_tests.rs  version_tests.rs
crates/repos/tests/testcommon/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: app_state.rs  fileserv.rs  main.rs  pg_session_store.rs  session_store.rs
crates/server/src/api/: annotation.rs  api_token.rs  attachment.rs  base.rs  crash.rs  error.rs  minidump.rs  mod.rs  product.rs  routes.rs  symbols.rs  token.rs  version.rs  webauthn.rs
crates/server/src/auth/: error.rs  mod.rs  routes.rs  webauthn.rs
crates/server/src/utils/: error.rs  mod.rs  stream_to_file.rs
crates/server/static/: input.css
crates/server/static/css/: style.css
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20230824_000001_create_product_table.rs  m20230824_000002_create_version_table.rs  m20230824_000003_create_crash_table.rs  m20230824_000005_create_annotation_table.rs  m20230824_000007_create_user_table.rs  m20230930_000008_create_session_table.rs  m20231210_000009_create_user_table.rs  m20231210_000010_create_credential_table.rs
src/backend/common/: Cargo.toml
src/backend/common/src/: jobs.rs  lib.rs  product_info.rs  settings.rs  token.rs
src/backend/curator/: Cargo.toml
src/backend/curator/src/: app.rs  error.rs  import_crash.rs  import_symbol.rs  jobs.rs  lib.rs  main.rs  product_listener.rs  product_sync.rs  settings.rs  state.rs
src/backend/data/: Cargo.toml
src/backend/data/src/: annotation.rs  api_token.rs  attachment.rs  crash.rs  crash_group.rs  credentials.rs  invitation.rs  lib.rs  pending_access.rs  product.rs  symbols.rs  user.rs  user_role.rs
src/backend/e2e/: Cargo.toml
src/backend/e2e/src/: lib.rs
src/backend/e2e/tests/: e2e_tests.rs
src/backend/ingestion/: Cargo.toml
src/backend/ingestion/src/: annotations.rs  app.rs  error.rs  lib.rs  main.rs  product_cache.rs  settings.rs  state.rs  utils.rs  validation.rs  worker.rs
src/backend/ingestion/tests/: minidump_upload_tests.rs
src/backend/processor/: Cargo.toml
src/backend/processor/src/: app.rs  error.rs  jobs.rs  lib.rs  main.rs  minidump.rs  settings.rs  signature_generator.rs  state.rs  symbol_supplier.rs  symbols.rs  utils.rs
src/backend/repos/: Cargo.toml
src/backend/server/: Cargo.toml
src/backend/testware/: Cargo.toml
src/common/common/: Cargo.toml
src/web/: Cargo.toml  error.rs  mod.rs  routes.rs
src/web/app/: Cargo.toml
src/web/end2end/: package-lock.json
src/web/frontend/: Cargo.toml
src/web/server/: Cargo.toml
src/web/ui/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.mjs
(+559 files in other folders)
