
[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/server"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[patch.crates-io]
# leptos = { path = "../leptos/leptos" }
# leptos_meta = { path = "../leptos/meta" }
# leptos_router = { path = "../leptos/router" }
# leptos_axum = { path = "../leptos/integrations/axum" }
# leptos-struct-table = { path = "../leptos-struct-table" }

[workspace.dependencies]
# Leptos
leptos = { version = "0.8.0-rc1", features = ["nightly"] }
leptos_meta = { version = "0.8.0-rc1" }
leptos_router = { version = "0.8.0-rc1", features = ["nightly"] }
leptos_axum = { version = "0.8.0-rc1" }
leptos-use = { version = "0.16.0-beta" }
leptos-struct-table = { git = "https://github.com/rcaelers/leptos-struct-table.git", branch = "leptos-0.8", features = [
  "chrono",
  "uuid",
] }

# Wasm
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.50" }

# WebAuthn
webauthn-rs-proto = { version = "0.5.1", features = ["wasm"] }
webauthn-rs = { version = "0.5.1", features = [
  "danger-allow-state-serialisation",
] }

# Serde / json
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
rmp-serde = "1.3.0"

# Tokio
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["tracing", "io"] }

# Tower / Axum
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tower-sessions = "0.14.0"
axum = { version = "0.8.3", features = [
  "form",
  "query",
  "macros",
  "multipart",
  "tracing",
] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
rustls = "0.23.26"

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "tracing-log",
  "local-time",
  "env-filter",
  "json",
] }
tracing-appender = "0.2"
tracing-subscriber-wasm = "0.1.0"
tracing-log = "0.2.0"

# SQLX
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "chrono",
  "json",
  "postgres",
  "uuid",
] }

# Minidump
minidump = { version = "0.25.0" }
minidump-processor = { version = "0.25.0" }
minidump-unwind = { version = "0.25.0", features = ["http"] }

# Misc
argon2 = "0.5.3"
async-trait = "0.1.88"
cfg-if = "1"
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.11"
console_error_panic_hook = "0.1.7"
console_log = "1"
data-encoding = "2.9.0"
enumflags2 = { version = "0.7.11", features = ["serde"] }
futures = "0.3.31"
http = "1.3.1"
log = "0.4.27"
mime = "0.3.17"
paste = "1.0.15"
rand = { version = "0.9.0", features = ["small_rng", "serde"] }
thiserror = "2.0.12"
time = "0.3.41"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = [
  "js",
  "v4",
  "fast-rng",
  "serde",
  "std",
] }
jwt-authorizer = "0.15.0"
jsonwebtoken = "9.3.1"
indexmap = "2.9.0"
itertools = "0.14.0"
dyn-clone = "1.0.19"
object_store = { version = "0.12", features = ["aws"] }
apalis = { version = "0.7.0", features = ["layers", "uuid"] }
apalis-sql = { version = "0.7.0", features = ["postgres", "tokio-comp"] }

#
# oauth2 = "4.4.2"
# openidconnect = { version = "3.5.0", features = [
#     "accept-rfc3339-timestamps",
#     "accept-string-booleans",
# ] }

# Dev dependencies
axum-test = "17.3.0"
serial_test = "3.2.0"
mockall = "0.13.1"

[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "site"

# the package in the workspace that contains the server binary (binary crate)
bin-package = "server"

# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "frontend"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "crates/server/static/css/style.css"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "crates/server/static"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:4433"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = []

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
