
[workspace]
resolver = "2"
members = [
  "src/backend/api",
  "src/backend/ingestion",
  "src/backend/curator",
  "src/backend/processor",
  "src/backend/common",
  "src/backend/data",
  "src/backend/repos",
  "src/backend/testware",
]
default-members = [
  "src/backend/api",
  "src/backend/ingestion",
  "src/backend/curator",
  "src/backend/processor",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]

# WebAuthn
webauthn-rs = { version = "0.5.4", features = [
  "danger-allow-state-serialisation",
] }

# Serde / json
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Tokio
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["tracing", "io"] }

# Tower / Axum
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
tower-sessions = "0.15.0"
axum = { version = "0.8.8", features = [
  "form",
  "query",
  "macros",
  "multipart",
  "tracing",
] }
axum-extra = { version = "0.12.5", features = ["error-response", "query"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rustls = "0.23.37"

# Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
  "tracing-log",
  "local-time",
  "env-filter",
  "json",
] }
tracing-appender = "0.2.4"
tracing-log = "0.2.0"

# SQLX
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "chrono",
  "json",
  "postgres",
  "uuid",
] }

# K8s
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = { version = "3.1.0", features = ["runtime", "derive"] }

# Minidump
minidump = { version = "0.26.1" }
minidump-processor = { version = "0.26.1" }
minidump-unwind = { version = "0.26.1", features = ["http"] }

# Misc
apalis = { version = "1.0.0-rc.7" }
apalis-codec = { version = "0.1.0-rc.7" }
apalis-core = { version = "1.0.0-rc.7" }
apalis-redis = { version = "1.0.0-rc.6" }
apalis-cron = { version = "1.0.0-rc.6" }
cron = "0.15"
argon2 = { version = "0.5.3", features = ["password-hash"] }
password-hash = { version = "0.5", features = ["getrandom"] }
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
config = "0.15.22"
data-encoding = "2.10.0"
dyn-clone = "1.0.20"
enumflags2 = { version = "0.7.12", features = ["serde"] }
fancy-regex = "0.17.0"
futures = "0.3.32"
glob = "0.3.3"
http = "1.4.0"
indexmap = "2.13.0"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
log = "0.4.29"
natord = "1.0.9"
object_store = { version = "0.13.2", features = ["aws"] }
paste = "1.0.15"
rand = { version = "0.10.0", features = ["serde"] }
redis = { version = "1.1.0", features = [
  "tokio-comp",
  "aio",
  "connection-manager",
] }
rhai = { version = "1.24.0", features = ["serde"] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
time = "0.3.47"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.22.0", features = [
  "js",
  "v4",
  "fast-rng",
  "serde",
  "std",
] }

#
# oauth2 = "4.4.2"
# openidconnect = { version = "3.5.0", features = [
#     "accept-rfc3339-timestamps",
#     "accept-string-booleans",
# ] }

#[dev-dependencies]
mockall = { version = "0.14.0" }
