
[workspace]
resolver = "2"
members = [
  "src/backend/api",
  "src/backend/ingestion",
  "src/backend/curator",
  "src/backend/processor",
  "src/backend/server",
  "src/common/common",
  "src/common/data",
  "src/common/email",
  "src/common/repos",
  "src/backend/testware",
  "src/backend/e2e",
  "src/web/server",
]
default-members = ["src/backend/server", "src/web/server"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
# Keep normal release builds suitable for CI/container builds. The expensive
# whole-program optimization path is available through `--profile maxperf`.
lto = false
opt-level = 'z'

[profile.maxperf]
inherits = "release"
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dev]
debug = 1 # line-level info only; full DWARF (debug=2) is slow to emit and link

[profile.coverage]
inherits = "dev"
opt-level = 0     # disable optimisations that can hide branches / dead code
codegen-units = 1 # required for accurate per-line/branch instrumentation
debug = 2         # full DWARF so llvm-cov maps counters back to source lines

[workspace.dependencies]

askama = "0.16.0"

# Serde / json
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Tokio
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["tracing", "io"] }

# Tower / Axum
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["full"] }
tower-sessions = "0.15.0"
axum = { version = "0.8.9", features = [
  "form",
  "query",
  "macros",
  "multipart",
  "tracing",
] }
axum-extra = { version = "0.12.6", features = ["error-response", "query"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rustls = "0.23.40"

# Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
  "tracing-log",
  "local-time",
  "env-filter",
  "json",
] }
tracing-appender = "0.2.5"
tracing-log = "0.2.0"

# SurrealDB
surrealdb = { version = "3.0.5", features = ["kv-mem"] }

# K8s
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = { version = "3.1.0", features = ["runtime", "derive"] }

# Minidump
minidump = { version = "0.26.1" }
minidump-processor = { version = "0.26.1" }
minidump-unwind = { version = "0.26.1", features = ["http"] }

# Misc
apalis = { version = "1.0.0-rc.9" }
apalis-codec = { version = "0.1.0-rc.9" }
apalis-core = { version = "1.0.0-rc.9" }
apalis-redis = { version = "1.0.0-rc.8" }
apalis-cron = { version = "1.0.0-rc.8" }
cron = "0.16"
argon2 = { version = "0.5.3", features = ["password-hash"] }
password-hash = { version = "0.6.1", features = ["getrandom"] }
async-trait = "0.1.89"
base64 = "0.22.1"
sha2 = "0.11.0"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.22"
data-encoding = "2.11.0"
dyn-clone = "1.0.20"
enumflags2 = { version = "0.7.12", features = ["serde"] }
fancy-regex = "0.18.0"
futures = "0.3.32"
glob = "0.3.3"
http = "1.4.0"
indexmap = "2.14.0"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
log = "0.4.29"
natord = "1.0.9"
object_store = { version = "0.13.2", features = ["aws"] }
paste = "1.0.15"
rand = { version = "0.10.1", features = ["serde"] }
redis = { version = "1.2.1", features = [
  "tokio-comp",
  "aio",
  "connection-manager",
] }
rhai = { version = "1.24.0", features = ["serde"] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
time = "0.3.47"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.1", features = [
  "js",
  "v4",
  "fast-rng",
  "serde",
  "std",
] }
reqwest = { version = "0.13", default-features = true, features = [
  "json",
  "form",
] }
resend-rs = { version = "0.25", default-features = false, features = [
  "rustls-tls",
] }

#
# oauth2 = "4.4.2"
# openidconnect = { version = "3.5.0", features = [
#     "accept-rfc3339-timestamps",
#     "accept-string-booleans",
# ] }

#[dev-dependencies]car
mockall = { version = "0.14.0" }
