[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
repos = { path = "../repos", optional = true }
data = { path = "../data" }

# Leptos
leptos = { workspace = true, features = ["tracing"] }
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos-struct-table = { workspace = true }
wasm-bindgen-futures.workspace = true

# Serde / json
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true

# Tower / Axum
tower = { workspace = true, optional = true }
tower-sessions = { workspace = true, optional = true }
axum = { workspace = true, optional = true }

# Tracing
tracing.workspace = true

# SQLx
sqlx = { workspace = true, optional = true }

# Misc
async-trait.workspace = true
cfg-if.workspace = true
chrono.workspace = true
enumflags2.workspace = true
futures.workspace = true
http.workspace = true
thiserror.workspace = true
uuid.workspace = true
webauthn-rs-proto.workspace = true
indexmap.workspace = true
# itertools.workspace = true
dyn-clone.workspace = true
paste.workspace = true

[dev-dependencies]
serial_test.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos-use/ssr",
  "dep:leptos_axum",
  "dep:sqlx",
  "dep:axum",
  "dep:tower",
  "dep:tower-sessions",
  "dep:repos",
]

[dependencies.web-sys]
version = "0.3"
features = [
  "CredentialCreationOptions",
  "CredentialRequestOptions",
  "CredentialsContainer",
  "Location",
  "Navigator",
  "PublicKeyCredential",
  "PublicKeyCredentialCreationOptions",
  "Window",
  "PublicKeyCredentialUserEntity",
  "PublicKeyCredentialRpEntity",
  "AuthenticatorResponse",
  "AuthenticationExtensionsClientOutputs",
  "PublicKeyCredentialParameters",
  "PublicKeyCredentialType",
]
