[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]

# Serde / json
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
rmp-serde.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber-wasm.workspace = true

# Misc
config.workspace = true
argon2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
uuid.workspace = true

[features]
default = []

ssr = [
  "dep:rand",
  "dep:argon2",
]
