[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]

# Serde / json
serde.workspace = true
serde_json.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-log.workspace = true

# Misc
config.workspace = true
argon2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
uuid.workspace = true
base64.workspace = true
glob.workspace = true
natord.workspace = true
object_store = { workspace = true, optional = true }

[features]
default = []

ssr = ["dep:rand", "dep:argon2", "dep:object_store"]
