[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]

# Serde / json
serde.workspace = true
serde_json.workspace = true

# SQLx
sqlx = { workspace = true, optional = true }

# Tracing
tracing.workspace = true

# Misc
#thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
strum.workspace = true
strum_macros.workspace = true
#argon2 = { version = "0.5", optional = true }

[features]
ssr = ["dep:sqlx"]

#[lints.rust]
#unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
