[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "../macros" }
migration = { path = "../migration" }

# Leptos
#leptos = { workspace = true, features = ["tracing"] }
#leptos_meta.workspace = true
#leptos_router.workspace = true
#leptos-use = { workspace = true }
#leptos_axum = { workspace = true, optional = true }
#leptos-struct-table = { workspace = true }
#wasm-bindgen-futures.workspace = true

# Serde / json
serde.workspace = true
serde_json.workspace = true
# serde-wasm-bindgen.workspace = true
# rmp-serde.workspace = true

# Tokio
#tokio = { workspace = true }

# Tower / Axum
# tower = { workspace = true }
# tower-http = { workspace = true }
# tower-sessions = { workspace = true }
# axum = { workspace = true }

# Tracing
# tracing.workspace = true
# tracing-subscriber-wasm.workspace = true

# SeaORM
#sea-orm = { workspace = true }
# features = [
#   "sqlx-postgres",
#   "sqlx-sqlite",
#   "macros",
#   "with-uuid",
#   "with-json",
# ]
#sea-query = { workspace = true }

#sea-schema = "0.16.0-rc.1"
sea-orm = { version = "1.1.7", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "macros",
  "with-uuid",
  "with-json",
] }
#sea-query = "0.32.0-rc.1"
sqlx-core = { version = "0.8.3", features = ["offline", "migrate"] }
#getrandom = { version = "0.2.15", features = ["js"] }

# Misc
# async-trait.workspace = true
# cfg-if.workspace = true
chrono.workspace = true
# config.workspace = true
# enumflags2.workspace = true
# futures.workspace = true
# http.workspace = true
# thiserror.workspace = true
uuid.workspace = true
# webauthn-rs-proto.workspace = true
# indexmap.workspace = true
# trait-variant.workspace = true
# itertools.workspace = true
# dyn-clone.workspace = true

# [dev-dependencies]
# serial_test.workspace = true
# tokio = { workspace = true }

# [features]
# default = []
# hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
# ssr = [
#   "leptos/ssr",
#   "leptos_meta/ssr",
#   "leptos_router/ssr",
#   "leptos-use/ssr",
#   "dep:sea-orm",
#   "dep:sea-query",
#   #  "dep:migration",
#   # "dep:entities",
# ]
