[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", default-features = false, features = ["hydrate"] }
leptos = { workspace = true, features = ["hydrate", "tracing"] }

# Leptos
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
wasm-bindgen.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber-wasm.workspace = true
tracing-subscriber.workspace = true
