[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
chrono = { version = "0.4.40", features = ["serde"] }
sea-schema = "0.16.1"

[dependencies.sea-orm-migration]
version = "1.1.7"
features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "with-uuid",
  "with-json",
]
