[package]
name = "repos"
version = "0.1.0"
edition = "2024"

[dependencies]

# Serde / json
serde.workspace = true
serde_json.workspace = true

# SQLx
sqlx = { workspace = true, optional = true }

# Tracing
tracing.workspace = true

# Misc
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

[features]
default = []
ssr = ["dep:sqlx"]
