[package]
name = "repos"
version = "0.1.0"
edition = "2024"

[dependencies]

# Serde / json
serde.workspace = true
serde_json.workspace = true

# SQLx
sqlx = { workspace = true, optional = true }

# Tracing
tracing.workspace = true

# Misc
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
argon2 = { version = "0.5", optional = true }

[features]
default = []
ssr = ["dep:sqlx", "dep:argon2"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
