[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
repos = { path = "../repos", default-features = false, features = ["ssr"] }
common = { path = "../common" }

# Leptos
leptos = { workspace = true, features = ["ssr", "tracing"] }
leptos_axum.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true

# Serde / json
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

# SQLx
sqlx.workspace = true

# Tokio / Axum
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true

# Tower
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
#tower-sessions-sqlx-store.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Minidump processing
minidump.workspace = true
minidump-processor.workspace = true
minidump-unwind.workspace = true

# Misc
async-trait.workspace = true
cfg-if.workspace = true
chrono.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
futures.workspace = true
mime.workspace = true
rand.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
url.workspace = true
webauthn-rs.workspace = true
jwt-authorizer.workspace = true
jsonwebtoken.workspace = true
trait-variant.workspace = true
log.workspace = true

[dev-dependencies]
axum-test.workspace = true
serial_test.workspace = true
