[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
repos = { path = "../repos" }
common = { path = "../common" }

# Leptos
leptos = { workspace = true, features = ["ssr", "tracing"] }
leptos_axum.workspace = true
# leptos_router.workspace = true
# leptos-use.workspace = true

# Serde / json
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

# SQLx
sqlx.workspace = true

# Tokio / Axum
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true

# Tower
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true

# Security
argon2.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-log.workspace = true

# Misc
async-trait.workspace = true
chrono.workspace = true
data-encoding.workspace = true
futures.workspace = true
rand.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
webauthn-rs.workspace = true
log.workspace = true
