[workspace]
resolver = "2"
members = ["app", "frontend", "server"]
default-members = ["server"]

[workspace.dependencies]

# Leptos
leptos = { version = "0.8.15", features = ["nightly"] }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.11", features = ["nightly"] }
leptos_axum = { version = "0.8.7" }
leptos-use = { version = "0.18.0" }
leptos-struct-table = { version = "0.17.0", features = ["chrono", "uuid"] }

# Wasm
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.58" }
console_error_panic_hook = "0.1.7"
tracing-subscriber-wasm = "0.1.0"

# WebAuthn
webauthn-rs = { version = "0.5.4", features = [
  "danger-allow-state-serialisation",
] }
webauthn-rs-proto = { version = "0.5.4", features = ["wasm"] }

# Serde / json
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
rmp-serde = "1.3.1"

# Tokio
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["tracing", "io"] }

# Tower / Axum
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
tower-sessions = "0.14.0"
axum = { version = "0.8.8", features = [
  "form",
  "query",
  "macros",
  "multipart",
  "tracing",
] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rustls = "0.23.36"

# Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "tracing-log",
  "local-time",
  "env-filter",
  "json",
] }
tracing-appender = "0.2.4"
tracing-log = "0.2.0"

# SQLX
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "chrono",
  "json",
  "postgres",
  "uuid",
] }

# Misc
argon2 = "0.5.3"
async-trait = "0.1.89"
cfg-if = "1"
chrono = { version = "0.4.43", features = ["serde"] }
data-encoding = "2.10.0"
dyn-clone = "1.0.20"
enumflags2 = { version = "0.7.12", features = ["serde"] }
futures = "0.3.31"
http = "1.4.0"
indexmap = "2.13.0"
log = "0.4.29"
paste = "1.0.15"
rand = { version = "0.9.2", features = ["small_rng", "serde"] }
thiserror = "2.0.17"
time = "0.3.45"
uuid = { version = "1.19.0", features = [
  "js",
  "v4",
  "fast-rng",
  "serde",
  "std",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "site"

# the package in the workspace that contains the server binary (binary crate)
bin-package = "server"

# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "frontend"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "server/static/css/style.css"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "server/static"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:4433"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = []

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
